populating game database

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,13 @@
-# Criando um perfil de projeto
-spring.profiles.active=${APP_PROFILE:test}
+# Configurações do perfil de teste
+# H2 Connection
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
 
-spring.jpa.open-in-view=false
+# H2 Client
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-cors.origins=${CORS_ORIGINS:http://localhost:8080, http://localhost:3000}
+# Show SQL
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
