--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,13 @@
-# Configurações do perfil de teste
-# H2 Connection
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-
-# H2 Client
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# Show SQL
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+## Configurações do perfil de desenvolvimento
+##spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+##spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+##spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+##spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
+#
+#spring.datasource.url=jdbc:postgresql://localhost:5432/dscatalog
+#spring.datasource.username=postgres
+#spring.datasource.password=1234567
+#
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.hibernate.ddl-auto=none
