--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,13 +1,9 @@
-# Configurações do perfil de teste
-# H2 Connection
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-
-# H2 Client
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# Show SQL
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+## Configurações do perfil de produção
+#
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.hibernate.ddl-auto=none
